--- a/lecture/extra.css
+++ b/lecture/extra.css
@@ -3,6 +3,10 @@
   padding: .75em 3.5em .75em 3.5em;
 }
 
+.remark-slide-number {
+  display: none;
+}
+
 .remark-slide-content h2 {
   font-size: 40px;
 }
