Describe data motion bottleneck

--- a/lecture/extra.css
+++ b/lecture/extra.css
@@ -20,6 +20,8 @@
 
 .mjx-chtml{ font-size: 105% !important; } /* See https://github.com/yihui/xaringan/issues/143 */
 
+.large { font-size: 130% }
+
 .small { font-size: 70% }
 
 h1 { margin-bottom: -.1ex; }
