Remove space beneath third-level header

--- a/lecture/extra.css
+++ b/lecture/extra.css
@@ -26,6 +26,7 @@
 
 h1 { margin-bottom: -.1ex; }
 h2 { margin-bottom: 0; }
+h3 { margin-bottom: 0; }
 ul { margin-top: 1ex; }
 ul li { margin-bottom: 1ex; }
 
