--- a/lecture/extra.css
+++ b/lecture/extra.css
@@ -46,3 +46,16 @@ img.center {
   margin-left: auto;
   margin-right: auto;
 }
+
+img.left {
+  display: block;
+  margin-left: 0;
+  margin-right: auto;
+}
+
+img.right {
+  display: block;
+  margin-left: auto;
+  margin-right: 0;
+}
+
